--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
         <div class="container">
             <h2>Recipes</h2>
-            <div id="myCarousel" class="carousel slide" data-ride="carousel">
+            <div id="myCarousel" class="carousel slide" >
               <ol class="carousel-indicators" id="carousel-indicators">
                 <!-- <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
                 <li data-target="#myCarousel" data-slide-to="1"></li>
@@ -109,6 +109,8 @@
                 <span class="sr-only">Next</span>
               </a>
             </div>
+            <br>
+            <button id="add-more" class="btn btn-outline-light">Get more recipes</button>
            </div>
 
 
