fleshing out the myRecipe div

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 
         <div class="container">
             <h2>Recipes</h2>
+            <button class="btn btn-outline-light" id="addRecipe">Add to myRecipes!</button>
             <div id="myCarousel" class="carousel slide">
                 <ol class="carousel-indicators" id="carousel-indicators">
 
