a few minor tweaks

--- a/Deployment/index.html
+++ b/Deployment/index.html
@@ -104,7 +104,7 @@
                 </a>
             </div>
            
-            <!-- <button class="button4" id="addRecipe">Add to my recipes</button> -->
+            <button class="button4" id="addRecipe">Add to my recipes</button>
             <button id="add-more" class="button4"> Get more recipes </button>
         </div>
 
